Fix broken layout

--- a/work/scss/main.scss
+++ b/work/scss/main.scss
@@ -17,3 +17,8 @@ $XL: 600px;
 @import "wintersmith-defaults";
 @import "better-simple-slideshow-styles";
 @import "compass/css3/background-size";
+@import "compass/css3/box-sizing";
+
+*, *:before, *:after {
+    @include box-sizing(border-box);
+}
